Fix 218, fix 219, fix 202, fix 192 (#221)
* Fix #218, fix #202. Massive desktop UI changes.

I hope this doesn't break anything too badly.
Next I'm going to fix the sliders on the military page.
And possibly update the sliders to reflect trainable per day ratios.

* Fix #219, fix #192. Fix the sliders on the military page.

Update the sliders to reflect trainable per day ratios.
Make sliders process changes as slide is moved.
Fix forum broken in sidebar update.

--- a/undyingkingdoms/static/css/style.css
+++ b/undyingkingdoms/static/css/style.css
@@ -35,17 +35,6 @@ button:active {
     top: 1px;
 }
 
-.sidebar {              /* The main sidebar which is always visible when logged in */
-    width: auto;
-    height: 1250px;
-    float: left;
-    margin-right: 50px;
-    padding: 15px;
-    line-height: 30px;
-    border: solid;
-    font-size: 20px;
-}
-
 .production_table {     /* The tables which display your infrastructure/military and let you build */
     width: auto;
     border: 1px solid;
